[tool.poetry]
name = "slodon"
version = "0.1.0"
description = ""
authors = ["Tamás Hadházy <helsgithub15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.3.0"
websockets = "^11.0.3"
pylint = "^2.17.4"
black = "^23.3.0"
textual = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slodon = "slodon.cli.main:start_cli"


