[tool.poetry]
name = "slodon"
version = "0.1.0"
description = ""
authors = ["Tamás Hadházy <helsgithub15@gmail.com>"]
readme = "README.md"
packages = [{include = "slodon"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
textual = "^0.27.0"
hadhzy-python-xlib = "^0.33"
cffi = {version="^1.15.1", optional=true}
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
mypy = "^1.3.0"
mkdocs-material = "9.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slodon = "slodon.cli.main:start_cli"

